fixed spacing on landing page, deleted search link from header

--- a/pantry/src/App.css
+++ b/pantry/src/App.css
@@ -115,7 +115,7 @@ justify-content: space-between;
 }
 
 #landing-button-div{
-  width: 43vw;
+  
 }
 
 #footer-main-div{
